# bt_api_swyftx

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/bt_api_swyftx/: __init__.py  plugin.py  registry_registration.py
src/bt_api_swyftx/configs/: swyftx.yaml
src/bt_api_swyftx/errors/: __init__.py
src/bt_api_swyftx/exchange_data/: __init__.py
src/bt_api_swyftx/feeds/live_swyftx/: __init__.py  request_base.py  spot.py
tests/containers/exchanges/: test_swyftx_exchange_data.py
tests/feeds/: test_swyftx_request_data_extra.py
